PlanIT-Front-End-React/src/components/DashboardContent/DashboardContentStyle.css
.dashboardTitle {
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(25px, 5vw, 30px);
    height: 10%;
}

.valueContainer {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    padding-bottom: 20px;
    height: 90%;
}

.chartContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80%;
}

.value {
    color: rgb(206, 230, 201);
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(30px, 5vw, 45px); 
    white-space: nowrap;
    overflow-x: auto;
}

.chart {
    height: 80%;
    max-width: 100%;
    overflow-x: auto;
    overflow-y: auto;
}

.chart canvas {
    max-width: 100% !important;
    height: 100% !important;
}

